more setup and restructoring

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Cold Drip Coffee Timer",
-  "short_name": "Drip Timer",
+  "name": "Mug Math",
+  "short_name": "Mug Math",
   "description": null,
   "dir": "auto",
   "lang": "en-US",
