--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "html-webpack-plugin": "^2.26.0",
     "node-sass": "^4.3.0",
     "sass-loader": "^4.1.1",
+    "sass-material-colors": "0.0.5",
     "serviceworker-webpack-plugin": "^0.1.7",
     "style-loader": "^0.13.1",
     "webpack": "^1.14.0",
