created array map for building blocks out dynamically and more dry

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Pat Jacobs",
   "license": "ISC",
   "dependencies": {
+    "array.prototype.move": "0.0.3",
     "material-ui": "^0.16.7",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
