--- a/package.json
+++ b/package.json
@@ -5,20 +5,19 @@
   "main": "index.js",
   "repository": "git@github.com:musicbender/mug-math.git",
   "scripts": {
-    "dev": "webpack",
-    "start": "sudo webpack-dev-server  --inline --hot",
-    "build": "webpack -p"
+    "start": "cross-env NODE_ENV=development webpack-dev-server  --inline --hot",
+    "build": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js"
   },
   "keywords": [],
   "author": "Pat Jacobs",
   "license": "ISC",
   "dependencies": {
     "array.prototype.move": "0.0.3",
-    "material-ui": "^0.16.7",
+    "material-ui": "^0.17.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
-    "react-router": "^3.0.2",
+    "react-router": "^4.0.0",
     "react-router-redux": "^4.0.7",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0"
@@ -30,16 +29,18 @@
     "babel-plugin-transform-object-rest-spread": "^6.22.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
+    "chunk-manifest-webpack-plugin": "^1.0.0",
+    "compression-webpack-plugin": "^0.3.2",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.26.1",
+    "css-loader": "^0.27.3",
     "favicons-webpack-plugin": "0.0.7",
     "html-webpack-plugin": "^2.26.0",
     "node-sass": "^4.3.0",
-    "sass-loader": "^4.1.1",
+    "sass-loader": "^6.0.3",
     "sass-material-colors": "0.0.5",
-    "serviceworker-webpack-plugin": "^0.1.7",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.14.0",
-    "webpack-dev-server": "^1.16.2"
+    "serviceworker-webpack-plugin": "^0.2.1",
+    "style-loader": "^0.14.1",
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.4.2"
   }
 }
