--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "repository": "git@github.com:musicbender/mug-math.git",
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack-dev-server  --inline --hot",
-    "build": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js"
+    "build": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js",
+    "build:server": "cross-env NODE_ENV=production webpack --config webpack.config.server.js"
   },
   "keywords": [],
   "author": "Pat Jacobs",
@@ -35,6 +36,7 @@
     "css-loader": "^0.27.3",
     "favicons-webpack-plugin": "0.0.7",
     "html-webpack-plugin": "^2.26.0",
+    "json-loader": "^0.5.4",
     "node-sass": "^4.3.0",
     "sass-loader": "^6.0.3",
     "sass-material-colors": "0.0.5",
