--- a/package.json
+++ b/package.json
@@ -5,15 +5,19 @@
   "main": "index.js",
   "repository": "git@github.com:musicbender/mug-math.git",
   "scripts": {
-    "start": "cross-env NODE_ENV=development webpack-dev-server  --inline --hot",
+    "start": "cross-env BABEL_DISABLE_CACHE=1 NODE_ENV=development nodemon index.js",
     "build": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js",
-    "build:server": "cross-env NODE_ENV=production webpack --config webpack.config.server.js"
+    "build:server": "cross-env NODE_ENV=production webpack --config webpack.config.server.js",
+    "bs": "npm run clean && npm run build && npm run build:server && npm run start:prod",
+    "clean": "rimraf dist"
   },
   "keywords": [],
   "author": "Pat Jacobs",
   "license": "ISC",
   "dependencies": {
     "array.prototype.move": "0.0.3",
+    "body-parser": "^1.17.1",
+    "express": "^4.15.2",
     "material-ui": "^0.17.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
@@ -28,6 +32,7 @@
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
     "babel-plugin-transform-object-rest-spread": "^6.22.0",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "chunk-manifest-webpack-plugin": "^1.0.0",
