--- a/package.json
+++ b/package.json
@@ -5,32 +5,43 @@
   "main": "index.js",
   "repository": "git@github.com:musicbender/mug-math.git",
   "scripts": {
-    "start": "cross-env NODE_ENV=development webpack-dev-server  --inline --hot",
-    "build": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack-dev-server --hot --progress --host 0.0.0.0 --port 8087 --config webpack.client.config.js",
+    "bs": "export NODE_ENV=prod; webpack --config webpack.server.config.js",
+    "bc": "export NODE_ENV=prod; webpack --config webpack.client.config.js",
+    "start": "concurrently \"npm run bc\" \"npm run bs\"  \"nodemon dist/server.bundle.js\"",
+    "go": "nodemon dist/server.bundle.js"
   },
   "keywords": [],
   "author": "Pat Jacobs",
   "license": "ISC",
   "dependencies": {
     "array.prototype.move": "0.0.3",
+    "express": "^4.15.2",
     "material-ui": "^0.17.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
     "react-router": "^4.0.0",
+    "react-router-dom": "^4.0.0",
     "react-router-redux": "^4.0.7",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0"
   },
   "devDependencies": {
     "autoprefixer-loader": "^3.2.0",
+    "babel": "^6.23.0",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
     "babel-plugin-transform-object-rest-spread": "^6.22.0",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
+    "babel-preset-stage-0": "^6.22.0",
+    "babel-register": "^6.24.0",
     "chunk-manifest-webpack-plugin": "^1.0.0",
     "compression-webpack-plugin": "^0.3.2",
+    "concurrently": "^3.4.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.27.3",
     "extract-text-webpack-plugin": "^2.1.0",
@@ -40,7 +51,8 @@
     "sass-loader": "^6.0.3",
     "sass-material-colors": "0.0.5",
     "serviceworker-webpack-plugin": "^0.2.1",
-    "style-loader": "^0.14.1",
+    "source-map-support": "^0.4.14",
+    "style-loader": "^0.16.0",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.2"
   }
