--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack-dev-server --hot --progress --host 0.0.0.0 --port 8087 --config webpack.client.config.js",
-    "bs": "export NODE_ENV=prod; webpack --config webpack.server.config.js",
-    "bc": "export NODE_ENV=prod; webpack --config webpack.client.config.js",
+    "bs": "export NODE_ENV=production; webpack --config webpack.server.config.js",
+    "bc": "export NODE_ENV=production; webpack --config webpack.client.config.js",
     "start": "concurrently \"npm run bc\" \"npm run bs\"  \"nodemon dist/server.bundle.js\"",
     "go": "nodemon dist/server.bundle.js"
   },
@@ -37,7 +37,6 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
-    "babel-register": "^6.24.0",
     "chunk-manifest-webpack-plugin": "^1.0.0",
     "compression-webpack-plugin": "^0.3.2",
     "concurrently": "^3.4.0",
@@ -47,6 +46,7 @@
     "favicons-webpack-plugin": "0.0.7",
     "html-webpack-plugin": "^2.26.0",
     "node-sass": "^4.3.0",
+    "null-loader": "^0.1.1",
     "sass-loader": "^6.0.3",
     "sass-material-colors": "0.0.5",
     "serviceworker-webpack-plugin": "^0.2.1",
