--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "repository": "git@github.com:musicbender/mug-math.git",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --hot --progress --host 0.0.0.0 --port 8087 --config webpack.client.config.js",
+    "dev": "export NODE_ENV=development; webpack-dev-server --hot --progress --host 0.0.0.0 --port 8087 --config webpack.client.config.js",
     "bs": "export NODE_ENV=production; webpack --config webpack.server.config.js",
     "bc": "export NODE_ENV=production; webpack --config webpack.client.config.js",
     "start": "concurrently \"npm run bc\" \"npm run bs\"  \"nodemon dist/server.bundle.js\"",
@@ -18,12 +18,12 @@
   "dependencies": {
     "array.prototype.move": "0.0.3",
     "express": "^4.15.2",
+    "history": "^4.6.1",
     "material-ui": "^0.17.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
-    "react-router": "^4.0.0",
-    "react-router-dom": "^4.0.0",
+    "react-router": "^3.0.3",
     "react-router-redux": "^4.0.7",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0"
