--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "dev": "export NODE_ENV=development; webpack-dev-server --hot --progress --host 0.0.0.0 --port 8087 --config webpack.client.config.js",
     "bs": "export NODE_ENV=production; webpack --config webpack.server.config.js",
     "bc": "export NODE_ENV=production; webpack --config webpack.client.config.js",
-    "start": "concurrently \"npm run bc\" \"npm run bs\"  \"nodemon dist/server.bundle.js\"",
-    "go": "nodemon dist/server.bundle.js"
+    "start": "concurrently \"npm run bc\" \"npm run bs\"  \"nodemon index.js\"",
+    "go": "nodemon index.js"
   },
   "keywords": [],
   "author": "Pat Jacobs",
