adjusted enviroment specific code, started performance testing, adjusted blur

--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "repository": "git@github.com:musicbender/mug-math.git",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "export NODE_ENV=development; webpack-dev-server --hot --progress --host 0.0.0.0 --port 8087 --config webpack.client.config.js",
+    "clean": "rimraf dist",
+    "dev": "export NODE_ENV=development; webpack-dev-server --hot --progress --host 0.0.0.0 --port 8087 --config webpack.dev.config.js",
     "bs": "export NODE_ENV=production; webpack --config webpack.server.config.js",
-    "bc": "export NODE_ENV=production; webpack --config webpack.client.config.js",
-    "start": "concurrently \"npm run bc\" \"npm run bs\"  \"nodemon index.js\"",
+    "bc": "export NODE_ENV=production; webpack --config webpack.prod.config.js",
+    "start": "rimraf dist && concurrently \"npm run bc\" \"npm run bs\"  \"nodemon index.js\"",
     "go": "nodemon index.js"
   },
   "keywords": [],
@@ -31,6 +32,7 @@
   "devDependencies": {
     "autoprefixer-loader": "^3.2.0",
     "babel-core": "^6.22.1",
+    "babel-eslint": "^7.2.2",
     "babel-loader": "^6.2.10",
     "babel-plugin-transform-object-rest-spread": "^6.22.0",
     "babel-polyfill": "^6.23.0",
@@ -42,12 +44,22 @@
     "concurrently": "^3.4.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.27.3",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-chai-expect": "^1.1.1",
+    "eslint-plugin-css-modules": "^2.7.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-mocha": "^4.9.0",
+    "eslint-plugin-react": "^6.10.3",
     "extract-text-webpack-plugin": "^2.1.0",
     "favicons-webpack-plugin": "0.0.7",
     "html-webpack-plugin": "^2.26.0",
     "node-sass": "^4.3.0",
     "null-loader": "^0.1.1",
+    "react-addons-perf": "^15.4.2",
     "react-router-page-transition": "^3.0.2",
+    "rimraf": "^2.6.1",
     "sass-loader": "^6.0.3",
     "sass-material-colors": "0.0.5",
     "serviceworker-webpack-plugin": "^0.2.1",
