--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "html-webpack-plugin": "^2.26.0",
     "node-sass": "^4.3.0",
     "null-loader": "^0.1.1",
+    "offline-plugin": "^4.7.0",
     "react-addons-perf": "^15.4.2",
     "react-router-page-transition": "^3.0.2",
     "rimraf": "^2.6.1",
