--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "dev": "export NODE_ENV=development; webpack-dev-server --hot --progress --host 0.0.0.0 --port 8087 --config webpack.dev.config.js",
     "bs": "export NODE_ENV=production; webpack --config webpack.server.config.js",
     "bc": "export NODE_ENV=production; webpack --config webpack.prod.config.js",
-    "start": "rimraf dist && concurrently \"npm run bc\" \"npm run bs\"  \"nodemon index.js\"",
-    "go": "nodemon index.js"
+    "build": "rimraf dist && concurrently \"npm run bc\" \"npm run bs\"  \"nodemon index.js\"",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "Pat Jacobs",
@@ -27,7 +27,8 @@
     "react-router": "^3.0.3",
     "react-router-redux": "^4.0.7",
     "react-tap-event-plugin": "^2.0.1",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "rimraf": "^2.6.1"
   },
   "devDependencies": {
     "autoprefixer-loader": "^3.2.0",
@@ -60,7 +61,6 @@
     "offline-plugin": "^4.7.0",
     "react-addons-perf": "^15.4.2",
     "react-router-page-transition": "^3.0.2",
-    "rimraf": "^2.6.1",
     "sass-loader": "^6.0.3",
     "sass-material-colors": "0.0.5",
     "serviceworker-webpack-plugin": "^0.2.1",
