--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "export NODE_ENV=development; webpack-dev-server --hot --progress --host 0.0.0.0 --port 8087 --config webpack.dev.config.js",
     "bs": "export NODE_ENV=production; webpack --config webpack.server.config.js",
     "bc": "export NODE_ENV=production; webpack --config webpack.prod.config.js",
-    "build": "npm run clean && npm run bc && npm run bs && nodemon index.js",
+    "postinstall": "npm run clean && npm run bc && npm run bs",
+    "build": "npm run postinstall && nodemon index.js",
     "start": "node index.js"
   },
   "keywords": [],
