--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "dev": "export NODE_ENV=development; webpack-dev-server --hot --progress --host 0.0.0.0 --port 8087 --config webpack.dev.config.js",
     "bs": "export NODE_ENV=production; webpack --config webpack.server.config.js",
     "bc": "export NODE_ENV=production; webpack --config webpack.prod.config.js",
-    "postinstall": "npm run clean && npm run bc && npm run bs",
-    "build": "npm run postinstall && nodemon index.js",
-    "start": "node index.js"
+    "build": "npm run clean && npm run bc && npm run bs",
+    "build-run": "npm run clean && npm run bc && npm run bs && nodemon index.js",
+    "start": "export process.env.PORT=49152 node index.js"
   },
   "keywords": [],
   "author": "Pat Jacobs",
