--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mug-math",
-  "version": "3.0.0",
+  "version": "1.0.0",
   "description": "A progressive web app that contains several \"mini apps\" of various coffee-related tools.",
   "main": "index.js",
   "repository": "git@github.com:musicbender/mug-math.git",
@@ -11,8 +11,8 @@
     "bs": "export NODE_ENV=production; webpack --config webpack.server.config.js",
     "bc": "export NODE_ENV=production; webpack --config webpack.prod.config.js",
     "build": "npm run clean && npm run bc && npm run bs",
-    "build-run": "npm run clean && npm run bc && npm run bs && nodemon index.js",
-    "start": "export process.env.PORT=49152 node index.js"
+    "build-run": "export PORT=3001; npm run clean && npm run bc && npm run bs && nodemon index.js",
+    "start": "export PORT=49152; export NODE_ENV=production; forever -c nodemon --exitcrash index.js"
   },
   "keywords": [],
   "author": "Pat Jacobs",
