--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rimraf dist",
-    "start": "export NODE_ENV=development; webpack-dev-server --hot --progress --host 0.0.0.0 --port 8087 --config webpack.dev.config.js",
-    "bs": "export NODE_ENV=production; webpack --config webpack.server.config.js",
-    "bc": "export NODE_ENV=production; webpack --config webpack.prod.config.js",
+    "start": "export NODE_ENV=development; webpack-dev-server --env=dev --hot --progress --host 0.0.0.0 --port 8087 --config webpack.dev.config.js",
+    "bs": "export NODE_ENV=production; webpack --env=prod --config webpack.server.config.js",
+    "bc": "export NODE_ENV=production; webpack --env=prod --config webpack.prod.config.js",
     "build": "npm run clean && npm run bc && npm run bs",
     "open:dist": "export PORT=3001; npm run clean && npm run bc && npm run bs && nodemon index.js",
     "start:live": "export PORT=49152; export NODE_ENV=production; forever -w --watchDirectory ./dist start index.js",
@@ -26,7 +26,7 @@
     "array.prototype.move": "0.0.3",
     "express": "^4.15.2",
     "history": "^4.6.1",
-    "material-ui": "^0.17.1",
+    "material-ui": "^0.18.6",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
@@ -40,17 +40,17 @@
     "autoprefixer-loader": "^3.2.0",
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.2.2",
-    "babel-loader": "^6.2.10",
+    "babel-loader": "^7.1.1",
     "babel-plugin-transform-object-rest-spread": "^6.22.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
     "chunk-manifest-webpack-plugin": "^1.0.0",
-    "compression-webpack-plugin": "^0.3.2",
+    "compression-webpack-plugin": "^1.0.0",
     "concurrently": "^3.4.0",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.27.3",
+    "css-loader": "^0.28.4",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-chai-expect": "^1.1.1",
@@ -59,8 +59,7 @@
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-mocha": "^4.9.0",
     "eslint-plugin-react": "^6.10.3",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "favicons-webpack-plugin": "0.0.7",
+    "extract-text-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^2.26.0",
     "node-sass": "^4.3.0",
     "null-loader": "^0.1.1",
@@ -70,8 +69,8 @@
     "sass-material-colors": "0.0.5",
     "serviceworker-webpack-plugin": "^0.2.1",
     "source-map-support": "^0.4.14",
-    "style-loader": "^0.16.0",
-    "webpack": "^2.2.1",
+    "style-loader": "^0.18.2",
+    "webpack": "^3.3.0",
     "webpack-dev-server": "^2.4.2"
   }
 }
