--- a/package.json
+++ b/package.json
@@ -7,16 +7,16 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rimraf dist",
-    "start": "export NODE_ENV=development; webpack-dev-server --env=dev --hot --progress --host 0.0.0.0 --port 8087 --config webpack.dev.config.js",
+    "start": "export NODE_ENV=development; webpack-dev-server --env=dev --https --hot --progress --host 0.0.0.0 --port 8087 --config webpack.dev.config.js",
     "bs": "export NODE_ENV=production; webpack --env=prod --config webpack.server.config.js",
-    "bc": "export NODE_ENV=production; webpack --env=prod --config webpack.prod.config.js",
+    "bc": "export NODE_ENV=production; export process.env.DEPLOY=false; webpack --env=prod --config webpack.prod.config.js",
     "build": "npm run clean && npm run bc && npm run bs",
     "open:dist": "export PORT=3001; nodemon index.js",
     "open:dev": "export NODE_ENV=development; babel-node index.js --presets es2015,stage-2",
     "build:open": "npm run build && npm run open:dist",
     "start:live": "export PORT=49152; export NODE_ENV=production; forever -w --watchDirectory ./dist start index.js",
     "deploy:package": "rsync -av package.json patjacobs:/home/patjacob/mug-math/ --delete",
-    "deploy": "rsync -avz dist/ patjacobs:/home/patjacob/mug-math/dist/ --delete"
+    "deploy": "babel-node tools/deploy.js && rsync -avz dist/ patjacobs:/home/patjacob/mug-math/dist/ --delete"
   },
   "keywords": [],
   "author": "Pat Jacobs",
