--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "bc": "export NODE_ENV=production; export process.env.DEPLOY=false; webpack --env=prod --config webpack.prod.config.js",
     "build": "npm run clean && npm run bc && npm run bs",
     "open:dist": "export PORT=3001; nodemon index.js",
-    "open:dev": "export NODE_ENV=development; babel-node index.js --presets es2015,stage-2",
     "build:open": "npm run build && npm run open:dist",
     "start:live": "export PORT=49152; export NODE_ENV=production; forever -w --watchDirectory ./dist start index.js",
     "deploy:package": "rsync -av package.json patjacobs:/home/patjacob/mug-math/ --delete",
@@ -44,7 +43,7 @@
     "babel-cli": "^6.24.1",
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.2.2",
-    "babel-loader": "^7.1.1",
+    "babel-loader": "^6.2.10",
     "babel-plugin-transform-object-rest-spread": "^6.22.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
@@ -75,6 +74,7 @@
     "source-map-support": "^0.4.14",
     "style-loader": "^0.18.2",
     "webpack": "^3.3.0",
-    "webpack-dev-server": "^2.4.2"
+    "webpack-dev-server": "^2.4.2",
+    "webpack-node-externals": "^1.6.0"
   }
 }
