--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rimraf dist",
-    "start": "export NODE_ENV=development; webpack-dev-server --env=dev --https --hot --progress --host 0.0.0.0 --port 8087 --config webpack.dev.config.js",
+    "start": "export NODE_ENV=development; webpack-dev-server --env=dev --hot --progress --host 0.0.0.0 --config webpack.dev.config.js",
     "bs": "export NODE_ENV=production; webpack --env=prod --config webpack.server.config.js",
     "bc": "export NODE_ENV=production; export process.env.DEPLOY=false; webpack --env=prod --config webpack.prod.config.js",
     "build": "npm run clean && npm run bc && npm run bs",
@@ -24,11 +24,11 @@
     "node": "7.0.0"
   },
   "dependencies": {
-    "array.prototype.move": "0.0.3",
+    "array.prototype.move": "0.0.4",
     "express": "^4.15.2",
     "express-https-redirect": "^1.0.0",
     "history": "^4.6.1",
-    "material-ui": "^0.18.6",
+    "material-ui": "^0.19.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
@@ -54,14 +54,14 @@
     "concurrently": "^3.4.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.4",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^14.1.0",
+    "eslint": "^4.5.0",
+    "eslint-config-airbnb": "^15.1.0",
     "eslint-plugin-chai-expect": "^1.1.1",
     "eslint-plugin-css-modules": "^2.7.1",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-mocha": "^4.9.0",
-    "eslint-plugin-react": "^6.10.3",
+    "eslint-plugin-react": "^7.3.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^2.26.0",
     "node-sass": "^4.3.0",
