changed styling of input box shadows

--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "null-loader": "^0.1.1",
     "offline-plugin": "^4.7.0",
     "react-addons-perf": "^15.4.2",
+    "react-perf-tool": "^0.2.2",
     "sass-loader": "^6.0.3",
     "sass-material-colors": "0.0.5",
     "serviceworker-webpack-plugin": "^0.2.1",
