adjusted some styling and testing server things

--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rimraf dist",
-    "start": "export NODE_ENV=development; webpack-dev-server --env=dev --hot --progress --host 0.0.0.0 --config webpack.dev.config.js",
+    "start": "export NODE_ENV=development; webpack-dev-server --env=dev --hot --https --progress --host 0.0.0.0 --config webpack.dev.config.js",
     "bs": "export NODE_ENV=production; webpack --env=prod --config webpack.server.config.js",
-    "bc": "export NODE_ENV=production; export process.env.DEPLOY=false; webpack --env=prod --config webpack.prod.config.js",
+    "bc": "export NODE_ENV=production; export DEPLOY=false; webpack --env=prod --config webpack.prod.config.js",
     "build": "npm run clean && npm run bc && npm run bs",
-    "open:dist": "export PORT=3001; nodemon index.js",
+    "open:dist": "export PORT=3011; nodemon index.js",
     "build:open": "npm run build && npm run open:dist",
     "start:live": "export PORT=49152; export NODE_ENV=production; forever -w --watchDirectory ./dist start index.js",
     "deploy:package": "rsync -av package.json patjacobs:/home/patjacob/mug-math/ --delete",
@@ -68,7 +68,6 @@
     "null-loader": "^0.1.1",
     "offline-plugin": "^4.7.0",
     "react-addons-perf": "^15.4.2",
-    "react-perf-tool": "^0.2.2",
     "sass-loader": "^6.0.3",
     "sass-material-colors": "0.0.5",
     "serviceworker-webpack-plugin": "^0.2.1",
