--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-https-redirect": "^1.0.0",
     "history": "^4.6.1",
     "material-ui": "^0.19.0",
+    "pug": "^0.1.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
