--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "array.prototype.move": "0.0.4",
+    "body-parser": "^1.18.2",
     "express": "^4.15.2",
     "express-https-redirect": "^1.0.0",
     "history": "^4.6.1",
