--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "build": "npm run clean && npm run bc && npm run bs",
     "open:dist": "export PORT=3011; nodemon index.js",
     "build:open": "npm run build && npm run open:dist",
-    "start:live": "export PORT=49152; export HTTP_PORT=49153; export NODE_ENV=production; forever -w --watchDirectory ./dist start index.js",
-    "deploy:package": "babel-node tools/deploy-pkg.js",
-    "deploy": "babel-node tools/deploy.js"
+    "start:live": "export PORT=49152; export HTTP_PORT=49153; export NODE_ENV=production; export LIVE=true; forever -w --watchDirectory ./dist start index.js",
+    "deploy:roots": "babel-node tools/deploy-roots.js",
+    "deploy": "npm run clean && babel-node tools/deploy.js && npm run deploy:roots"
   },
   "keywords": [],
   "author": "Pat Jacobs",
@@ -50,6 +50,7 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
+    "chalk": "^2.1.0",
     "chunk-manifest-webpack-plugin": "^1.0.0",
     "compression-webpack-plugin": "^1.0.0",
     "concurrently": "^3.4.0",
