--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rimraf dist",
     "start": "export NODE_ENV=development; webpack-dev-server --env=dev --hot --https --progress --host 0.0.0.0 --config webpack.dev.config.js",
-    "bs": "export NODE_ENV=production; webpack --env=prod --config webpack.server.config.js",
-    "bc": "export NODE_ENV=production; export DEPLOY=false; webpack --env=prod --config webpack.prod.config.js",
+    "bs": "export NODE_ENV=production; export LIVE=false; webpack --env=prod --config webpack.server.config.js",
+    "bc": "export NODE_ENV=production; export LIVE=false; webpack --env=prod --config webpack.prod.config.js",
     "build": "npm run clean && npm run bc && npm run bs",
-    "open:dist": "export PORT=3011; nodemon index.js",
+    "open:dist": "export NODE_ENV=production; export LIVE=false; export PORT=3011; nodemon index.js",
     "build:open": "npm run build && npm run open:dist",
-    "start:live": "export PORT=49152; export HTTP_PORT=49153; export NODE_ENV=production; export LIVE=true; forever -w --watchDirectory ./dist start index.js",
+    "start:live": "export PORT=49152; export HTTP_PORT=49153; export NODE_ENV=production; forever -w --watchDirectory ./dist start index.js",
     "deploy:roots": "babel-node tools/deploy-roots.js",
-    "deploy": "npm run clean && babel-node tools/deploy.js && npm run deploy:roots"
+    "deploy:www": "babel-node tools/deploy-www.js",
+    "deploy": "export NODE_ENV=production; export LIVE=true; export PORT=49152; export HTTP_PORT=49153; npm run clean && babel-node tools/deploy.js && npm run deploy:roots"
   },
   "keywords": [],
   "author": "Pat Jacobs",
