--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "bs": "export NODE_ENV=production; export LIVE=false; webpack --env=prod --config webpack.server.config.js",
     "bc": "export NODE_ENV=production; export LIVE=false; webpack --env=prod --config webpack.prod.config.js",
     "build": "npm run clean && npm run bc && npm run bs",
-    "open:dist": "export NODE_ENV=production; export LIVE=false; export PORT=3011; nodemon index.js",
+    "open:dist": "export NODE_ENV=production; export LIVE=false; export PORT=3001; nodemon index.js",
     "build:open": "npm run build && npm run open:dist",
     "start:live": "export PORT=49152; export HTTP_PORT=49153; export NODE_ENV=production; forever -w --watchDirectory ./dist start index.js",
     "deploy:roots": "babel-node tools/deploy-roots.js",
@@ -28,6 +28,7 @@
     "array.prototype.move": "0.0.4",
     "body-parser": "^1.18.2",
     "express": "^4.15.2",
+    "express-force-ssl": "^0.3.2",
     "history": "^4.6.1",
     "material-ui": "^0.19.0",
     "pug": "^0.1.0",
