--- a/static/manifest.json
+++ b/static/manifest.json
@@ -5,7 +5,7 @@
   "dir": "auto",
   "lang": "en-US",
   "display": "standalone",
-  "orientation": "any",
+  "orientation": "portrait",
   "start_url": "/",
   "theme_color": "#533a11",
   "background_color": "#ffffff",
