--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "node-sass": "^4.3.0",
     "null-loader": "^0.1.1",
     "offline-plugin": "^4.7.0",
+    "pug-loader": "^2.3.0",
     "react-addons-perf": "^15.4.2",
     "rsync": "^0.6.1",
     "sass-loader": "^6.0.3",
