--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Mug Math",
-  "short_name": "Mug Math",
+  "short_name": "MugMath",
   "description": "MugMath is a collection geeky tools for coffee geeks made by a coffee geek. This web app aims to help regular home brewers, seasoned pros, and coffee roasters alike make better coffee. Updates will be regular and I'll be constantly adding more tools to the collection. Enjoy and drink good coffee!",
   "dir": "auto",
   "lang": "en-US",
@@ -43,6 +43,11 @@
     {
       "src": "favicons/android-chrome-192x192.png",
       "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "favicons/android-chrome-512x512.png",
+      "sizes": "512x512",
       "type": "image/png"
     },
     {
