--- a/static/manifest.json
+++ b/static/manifest.json
@@ -7,7 +7,7 @@
   "display": "standalone",
   "orientation": "portrait",
   "start_url": "/",
-  "theme_color": "#533a11",
+  "theme_color": "#000000",
   "background_color": "#ffffff",
   "serviceworker": {
     "src": "sw.js",
@@ -16,132 +16,131 @@
   },
   "icons": [
     {
-      "src": "favicons/android-chrome-36x36.png",
+      "src": "favicons/android-icon-36x36.png",
       "sizes": "36x36",
       "type": "image/png"
     },
     {
-      "src": "favicons/android-chrome-48x48.png",
+      "src": "favicons/android-icon-48x48.png",
       "sizes": "48x48",
       "type": "image/png"
     },
     {
-      "src": "favicons/android-chrome-72x72.png",
+      "src": "favicons/android-icon-72x72.png",
       "sizes": "72x72",
       "type": "image/png"
     },
     {
-      "src": "favicons/android-chrome-96x96.png",
+      "src": "favicons/android-icon-96x96.png",
       "sizes": "96x96",
       "type": "image/png"
     },
     {
-      "src": "favicons/android-chrome-144x144.png",
+      "src": "favicons/android-icon-144x144.png",
       "sizes": "144x144",
       "type": "image/png"
     },
     {
-      "src": "favicons/android-chrome-192x192.png",
+      "src": "favicons/android-icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "favicons/android-chrome-512x512.png",
+      "src": "favicons/android-icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     },
     {
-      "src": "apple-icon-57x57.png",
+      "src": "favicons/apple-icon-57x57.png",
       "sizes": "57x57",
       "type": "image/png"
     },
     {
-      "src": "apple-icon-60x60.png",
+      "src": "favicons/apple-icon-60x60.png",
       "sizes": "60x60",
       "type": "image/png"
     },
     {
-      "src": "apple-icon-72x72.png",
+      "src": "favicons/apple-icon-72x72.png",
       "sizes": "72x72",
       "type": "image/png"
     },
     {
-      "src": "apple-icon-76x76.png",
+      "src": "favicons/apple-icon-76x76.png",
       "sizes": "76x76",
       "type": "image/png"
     },
     {
-      "src": "apple-icon-114x114.png",
+      "src": "favicons/apple-icon-114x114.png",
       "sizes": "114x114",
       "type": "image/png"
     },
     {
-      "src": "apple-icon-120x120.png",
+      "src": "favicons/apple-icon-120x120.png",
       "sizes": "120x120",
       "type": "image/png"
     },
     {
-      "src": "apple-icon-144x144.png",
+      "src": "favicons/apple-icon-144x144.png",
       "sizes": "144x144",
       "type": "image/png"
     },
     {
-      "src": "apple-icon-152x152.png",
+      "src": "favicons/apple-icon-152x152.png",
       "sizes": "152x152",
       "type": "image/png"
     },
     {
-      "src": "apple-icon-180x180.png",
+      "src": "favicons/apple-icon-180x180.png",
       "sizes": "180x180",
       "type": "image/png"
     },
     {
-      "src": "apple-icon-precomposed.png",
+      "src": "favicons/apple-icon-precomposed.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "apple-icon.png",
+      "src": "favicons/apple-icon.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "favicon-16x16.png",
+      "src": "favicons/favicon-16x16.png",
       "sizes": "16x16",
       "type": "image/png"
     },
     {
-      "src": "favicon-32x32.png",
+      "src": "favicons/favicon-32x32.png",
       "sizes": "32x32",
       "type": "image/png"
     },
     {
-      "src": "favicon-96x96.png",
+      "src": "favicons/favicon-96x96.png",
       "sizes": "96x96",
       "type": "image/png"
     },
     {
-      "src": "favicon.ico",
-      "sizes": "16x16",
-      "type": "image/png"
+      "src": "favicons/favicon.ico",
+      "sizes": "16x16"
     },
     {
-      "src": "ms-icon-70x70.png",
+      "src": "favicons/ms-icon-70x70.png",
       "sizes": "70x70",
       "type": "image/png"
     },
     {
-      "src": "ms-icon-144x144.png",
+      "src": "favicons/ms-icon-144x144.png",
       "sizes": "144x144",
       "type": "image/png"
     },
     {
-      "src": "ms-icon-150x150.png",
+      "src": "favicons/ms-icon-150x150.png",
       "sizes": "150x150",
       "type": "image/png"
     },
     {
-      "src": "ms-icon-310x310.png",
+      "src": "favicons/ms-icon-310x310.png",
       "sizes": "310x310",
       "type": "image/png"
     }
