--- a/package.json
+++ b/package.json
@@ -11,11 +11,10 @@
     "bs": "export NODE_ENV=production; export LIVE=false; webpack --env=prod --config webpack.server.config.js",
     "bc": "export NODE_ENV=production; export LIVE=false; webpack --env=prod --config webpack.prod.config.js",
     "build": "npm run clean && npm run bc && npm run bs",
-    "open:dist": "export NODE_ENV=production; export LIVE=false; export PORT=3001; nodemon index.js",
+    "open:dist": "export NODE_ENV=production; export LIVE=false; export PORT=3001; nodemon index.js --exec babel-node",
     "build:open": "npm run build && npm run open:dist",
     "start:live": "export PORT=3000; export HTTP_PORT=3001; export NODE_ENV=production; forever -w --watchDirectory ./dist start index.js",
     "deploy:roots": "babel-node tools/deploy-roots.js",
-    "deploy:www": "babel-node tools/deploy-www.js",
     "deploy": "export NODE_ENV=production; export LIVE=true; export PORT=3000; export HTTP_PORT=3001; npm run clean && babel-node tools/deploy.js && npm run deploy:roots"
   },
   "keywords": [],
@@ -31,8 +30,9 @@
     "express-force-ssl": "^0.3.2",
     "history": "^4.6.1",
     "material-ui": "^0.19.0",
-    "pug": "^0.1.0",
+    "pug": "^2.0.0-rc.4",
     "react": "^15.4.2",
+    "react-addons-perf": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
     "react-router": "^4.1.2",
