--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "open:dist": "export NODE_ENV=production; export LIVE=false; export PORT=3001; nodemon index.js --exec babel-node",
     "build:open": "npm run build && npm run open:dist",
     "start:live": "export PORT=3000; export HTTP_PORT=3001; export NODE_ENV=production; forever -w --watchDirectory ./dist start index.js",
+    "deploy:nginx": "babel-node tools/deploy-nginx.js",
     "deploy:roots": "babel-node tools/deploy-roots.js",
     "deploy": "export NODE_ENV=production; export LIVE=true; export PORT=3000; export HTTP_PORT=3001; npm run clean && babel-node tools/deploy.js && npm run deploy:roots"
   },
